--- a/page.html
+++ b/page.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="StyleSheet" href="AEM.css"/>
+    <link rel="StyleSheet" href="style2.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>photos d'AEM</title>
 </head>
 <body>
      <!---coverture-->
      <div class="cover">
-        <img class="sans" src="Images/moi.jpg"/>
-        <h1>BIENVENUE<br/>AEM:<br/>ASSOCIATION DES ETUDIANTS MUSLUMANS</h1>
-        <img class="sans1" src="Images/mo.png"/>
-        <p>Université N'djamena | Faculté des Sciences Exactes et Appliquées</p>
-         <div style="text-align: center;">
-             <a class="contact-button" href="mailto:Issadjiddahassan240@gmail.com" title="Secrétaire générale">ME CONTACTER</a>
+            <img class="sans" src="Images/moi.jpg"/>
+            <h1>BIENVENUE<br/>AEM:<br/>ASSOCIATION DES ETUDIANTS MUSLUMANS</h1>
+            <img class="sans1" src="Images/mo.png"/>
+            <p>Université N'djamena | Faculté des Sciences Exactes et Appliquées</p>
+            <div style="text-align: center;">
+                <a class="contact-button" href="mailto:Issadjiddahassan240@gmail.com" title="Secrétaire générale">ME CONTACTER</a>
          </div>
         <div class="cover-contact">
             <p class="chad">République du Tchad</a></p>
