--- a/personnel.html
+++ b/personnel.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="StyleSheet" href="AEM.css"/>
+    <link rel="StyleSheet" href="style2.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Les dirigeants d'AEM</title>
 </head>
 <body>
      <!---coverture-->
      <div class="cover">
-        <img class="sans" src="Images/moi.jpg"/>
-        <h1>BIENVENUE<br/>AEM:<br/>ASSOCIATION DES ETUDIANTS MUSLUMANS</h1>
-        <img class="sans1" src="Images/mo.png"/>
-        <p>Université N'djamena | Faculté des Sciences Exactes et Appliquées</p>
+            <img class="sans" src="Images/moi.jpg"/>
+            <h1>BIENVENUE<br/>AEM:<br/>ASSOCIATION DES ETUDIANTS MUSLUMANS</h1>
+            <img class="sans1" src="Images/mo.png"/>
+            <p>Université N'djamena | Faculté des Sciences Exactes et Appliquées</p>
          <div style="text-align: center;">
              <a class="contact-button" href="mailto:Issadjiddahassan240@gmail.com" title="Secrétaire générale">ME CONTACTER</a>
          </div>
@@ -22,7 +22,6 @@
             <p class="chad">Unité-travail-progès</a></p>
             <p><a  href="mailto:Issadjiddahassan240@gmail.com" title="Secrétaire générale">Issadjiddahassan240@gmail.com</a></p>
             <p><a href="tel:+23568644344" title="Secrétaire générale">68 64 43 44  </a></p>
-           
         </div>
     </div>
      <!---Section gris 1-->
